plang/testing/logs/false-incorrect/175/program175.p.p
kezX.
wG dUh u (kguim (sdWNx l (R) (qTN7 z zCu0))) (gr51 (N3L) (SMZfD) (H) (sS (j) (Hszzb))) :- ((lMA0)).


o (ehH x (PD4) (OF) (Ew55)).


s.

al O.
? u (dN (E) QU (K2p0) (HTV)) rl1 (H3) ND5; fQbs rhOU, wR, ru; aPPx (u4tX) Dxq, y (HGmIM) eXYv1, (b (O93) (RSids) (FKA)); (iQMW), t (rIDE (coPcm cF j gjZ) (wSJ) (a uwOp (R))); j.



